USB: Properly report initialization status in Stack::InitCheck().

Should fix one of the new KDLs in #19117 due to the PhysicalMemoryAllocator
failing to initialize.